Fix update and remove button contrast and add aria labels

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -18,6 +18,10 @@ body {
     color: #00004d !important;
 }
 
+.text-muted {
+    color: #00004d !important;;
+}
+
 .bg-lite-gray {
     background-color: #e0e0e0;
 }
@@ -111,8 +115,24 @@ margin-top: -10px;
 /* Bag button */
 
 .bag-button {
+    color: #00004d;
+    border: 3px solid #00004d;
     border-radius: 12px;
     padding: 4px 18px;
+    font-weight: 600;
+}
+
+.bag-remove {
+    background-color: #ff4052;
+}
+
+.bag-update {
+    background-color: #F5F5F5;
+}
+
+.bag-button:hover {
+    background-color: #00004d;
+    color: #f5f5f5;
 }
 
 /* Home page */
@@ -405,7 +425,7 @@ margin-top: -10px;
 }
 
 .allauth-form-inner-content a {
-	color: #1e1e88; /* text-info */
+	color: #1e1e88;
 }
 
 .allauth-form-inner-content .form-check-label {
